# sdl2_games

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: entrance.cpp
src/application/: appEventListener.cppm  application.cppm  applicationSharedState.cppm
src/application/components/: Components.cppm  IComponent.cppm  IComponentBase.cppm
src/application/components/Basic/: IWindowSizeChangedListener.cppm
src/application/components/Button/: Buttons.cppm
src/application/config/: applicationConfig.cppm  applicationConstants.cppm  snakeGameConfig.cppm
src/application/framework/: json.ixx
src/application/framework/freeType/: freeTypeFont.cppm
src/application/framework/imgui/: SDL2_ImGui_VM.cppm  imguiUtilities.cppm  imguiWindows.cppm
src/application/framework/layer/: layerFramework.cppm  workableLayer.cppm
src/application/framework/sdl2/: SDL2_EventListener.cppm  SDL2_Utilities.cppm
src/application/functionalLayers/: TopListenerLayer.cppm  appMenuLayer.cppm  applicationBasicLayers.ixx  selectGameLayer.cppm  snakeGameLayer.cppm
src/application/resource/: applicationResources.cppm
src/application/utilities/: fileUtilities.cppm  randomGenerator.cppm  textureAtlas.cppm
src/application/utilities/font/: fontHolder.cppm
src/headers/: AppMacros.h  stdc++.h
src/libs/: std_essentials.ixx  std_overloads.ixx  template_string.ixx
